working thru layout issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
  @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
  
+ html, body {
+     height: 100%;
+ }
  /** Header **/
  
  .my_header {
@@ -61,6 +64,7 @@ footer {
     width: 100%;
     margin: 0;
     padding: 0;
+    
 }
 
 .footer_text {
@@ -112,6 +116,14 @@ footer {
 .add_recipe_form label {
     font-family: 'Poppins', sans-serif;
     font-size: large;
+}
+
+textarea {
+    min-width:400px; 
+    max-width:100%;
+    min-height:50px;
+    height:100%;
+    width:100%;
 }
 
 /** Buttons **/
